<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutKisiSec"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KisiSecFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/anaRenk"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lugrasimo"
        android:text="EVENTMAG"
        android:textColor="@color/yazi2"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="@id/toolbar2"
        app:layout_constraintBottom_toBottomOf="@id/toolbar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/kisi_sayisi_sec_text"
        android:textColor="@color/yazi1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <Button
        android:id="@+id/buttonDevamEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/anaRenk"
        android:fontFamily="@font/poppins"
        android:text="@string/ilerle_button"
        android:textColor="@color/yazi2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupKisiSayisi" />

    <RadioGroup
        android:id="@+id/radioGroupKisiSayisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/yazi1"
            android:fontFamily="@font/poppins"
            android:text="1"
            android:textColor="@color/yazi1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/yazi1"
            android:text="2"
            android:fontFamily="@font/poppins"
            android:textColor="@color/yazi1"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/yazi1"
            android:text="3"
            android:fontFamily="@font/poppins"
            android:textColor="@color/yazi1"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/yazi1"
            android:text="4"
            android:fontFamily="@font/poppins"
            android:textColor="@color/yazi1"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/radio5Fazla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/yazi1"
            android:fontFamily="@font/poppins"
            android:selectAllOnFocus="false"
            android:text="@string/daha_fazla_kisi"
            android:textColor="@color/yazi1"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>
